--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body> 
     <p class="name">Pecsétnyomda</p>
-    <p class="desc">Magyarország legnagyobb Pecsétnyomdája</p> 
+    <p class="desc">Magyarország legnagyobb Pecsétnyomdája</p>  <!-- oriási nagy hazugság -->
     <img src="blueone.jpg" class="item">
     <img src="stamp1.jpg" class="stamp1">
     <h1 class="notavailable">--------</h1>
