--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <p class="desc">Magyarország legnagyobb Pecsétnyomdája</p>  <!-- oriási nagy hazugság -->
     <img src="blueone.jpg" class="item">
     <img src="stamp1.jpg" class="stamp1">
-    <h1 class="notavailable">--------</h1>
-    <h1 class="available">+++++HUF</h1>
-    
+    <div class="notavailable"></div>
+    <div class="available"></div>
+    <h1 class="stamp01 notavailable">--------</h1>
 </body>
 </html>
