--- a/Webstore.html
+++ b/Webstore.html
@@ -56,7 +56,7 @@
     <h1 class="stamp08 notavailable">--------</h1>
 </div>
 
-
+<a href="index.html"><img src="arrow.png" class="arrow"></a>
 
 <footer class="footer">
     <a href="https://njt.hu/">Nemzeti jogszabálytár</a>
