--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,3 +9,20 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="icon" type="image/x-icon" href="Favicon.png">
+</head>
+
+<body>
+    <p class="name">Bélyegműhely</p>
+    <p class="mit">Ahol minden bélyeg megtalálható</p>
+<p class="lie">"KARBANTARTÁS ALATT"</p>
+<a href="Webstore.html"><img src="bélyeg.png" class="image"></a>
+<p class="biztos">Kattints rá! ----></p>
+
+<footer class="footer2">
+    <a href="https://njt.hu/">Nemzeti jogszabálytár</a>
+    <a href="https://www.stampworld.com/">StampWorld</a>
+    <a href="https://kozadat.hu/kereso/">Közadatkereső</a>
+</footer>
+</body>
+
+</html>
