--- a/Webstore.html
+++ b/Webstore.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MWebstore</title>
+    <title>Webstore</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/x-icon" href="Favicon.png">
@@ -58,11 +58,6 @@
 
 <a href="index.html"><img src="arrow.png" class="arrow"></a>
 
-<footer class="footer">
-    <a href="https://njt.hu/">Nemzeti jogszabálytár</a>
-    <a href="https://www.stampworld.com/">StampWorld</a>
-    <a href="https://kozadat.hu/kereso/">Közadatkereső</a>
-</footer>
     
 </body>
 </html>
