--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Stamps</title>
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="icon" type="image/x-icon" href="Favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Bélyegműhely - Főoldal</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/x-icon" href="Favicon.png">
 </head>
-
 <body>
-    <p class="name">Bélyegműhely</p>
-    <p class="mit">Ahol minden bélyeg megtalálható</p>
-<p class="lie">"KARBANTARTÁS ALATT"</p>
-<a href="Webstore.html"><img src="bélyeg.png" class="image"></a>
-
-
+    <div class="home-container">
+        <header>
+            <h1 class="name">Bélyegműhely</h1>
+            <p class="mit">Ahol minden bélyeg megtalálható</p>
+            <p class="maintenance-notice">KARBANTARTÁS ALATT</p>
+        </header>
+        
+        <div class="image-container">
+            <a href="Webstore.html" class="store-link">
+                <img src="bélyeg.png" alt="Bélyeg" class="main-image">
+                <div class="enter-store">Belépés a webáruházba</div>
+            </a>
+        </div>
+    </div>
 </body>
-
 </html>
